# NITSOL2

./: CMakeLists.txt  README.md  nitbt.f  nitdflts.f  nitdrv.f  nitgm.f  nitjv.f  nitsol.f  nitstb.f  nittfq.f
examples/Bratu/: CMakeLists.txt  bratu.f  hwscrtd.f  jacvbratu.f
examples/Cavity/: CMakeLists.txt  cavity.f  jacvcav.f
examples/Pormed/: CMakeLists.txt  jacvpm.f  pormed.f
examples/T1/: CMakeLists.txt  fs_183_6.mtx  t1.f90
examples/linear/: CMakeLists.txt
olddoc/: nith.txt
src/: nitbt.f  nitcgm.f  nitdflts.f  nitdflts.h  nitdrv.f  nitgm.f  nitjv.f  nitsol.f  nitstb.f  nittfq.f
